# internal/v1/entity/purchase/entity.go
@@ -1,0 +1,31 @@
+package purchase
+
+import (
+	model "eirc.app/internal/v1/structure/purchase"
+	"gorm.io/gorm"
+)
+
+type Entity interface {
+	WithTrx(tx *gorm.DB) Entity
+	Created(input *model.Table) (err error)
+	List(input *model.Fields) (amount int64, output []*model.Table, err error)
+	GetByID(input *model.Field) (output *model.Table, err error)
+	Deleted(input *model.Field) (err error)
+	Updated(input *model.Table) (err error)
+}
+
+type entity struct {
+	db *gorm.DB
+}
+
+func New(db *gorm.DB) Entity {
+	return &entity{
+		db: db,
+	}
+}
+
+func (e *entity) WithTrx(tx *gorm.DB) Entity {
+	return &entity{
+		db: tx,
+	}
+}
